--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "npm run init-hooks",
+    "postinstall": "ng build --output-path angularproject --aot --prod",
     "execute:hooks-folder": "git config core.hooksPath .githooks",
     "execute:prepare-commit-msg": "shx chmod +x .githooks/prepare-commit-msg",
     "execute:pre-commit": "shx chmod +x .githooks/pre-commit",
@@ -24,6 +24,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.15",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/cdk": "~7.3.7",
     "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
@@ -43,7 +45,8 @@
     "tslib": "^1.10.0",
     "tslint-lines-between-class-members": "^1.3.6",
     "tslint-lines-between-decorator-and-class": "^1.0.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "~3.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
@@ -55,6 +58,7 @@
     "@types/node": "~8.9.4",
     "angular-tslint-rules": "^1.20.1",
     "codelyzer": "~4.5.0",
+    "express": "^4.17.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -62,6 +66,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "path": "^0.12.7",
     "prettier": "1.18.2",
     "protractor": "~5.4.0",
     "rxjs-tslint-rules": "^4.25.0",
@@ -71,5 +76,9 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "10.15.2",
+    "npm": "6.8.0"
   }
 }
