--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod",
+    "postinstall": "ng build --output-path angularproject --aot --prod",
     "execute:hooks-folder": "git config core.hooksPath .githooks",
     "execute:prepare-commit-msg": "shx chmod +x .githooks/prepare-commit-msg",
     "execute:pre-commit": "shx chmod +x .githooks/pre-commit",
