--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.15",
     "@angular/material": "^7.3.7",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
